tweak images and styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Manden Vol...         liefs...       lekkers...      leuks...     moois...</title>
+		<title>Manden VOL... liefs... lekkers... leuks... moois...</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -28,6 +28,7 @@
 			<section id="header">
 				<header>
 					<h1>MANDEN VOL</h1>
+					<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/title.png" alt="" /></a>
 					<p>gemaakt door Hedwig</p>
 				</header>
 				<footer>
@@ -126,7 +127,7 @@
 			</article>
 		
 		<!-- Generic -->
-		<!--
+		
 			<article class="container box style3">
 				<header>
 					<h2>Generic Box</h2>
@@ -280,7 +281,7 @@
 					</form>
 				</section>
 			</article>
-		-->
+		
 		
 		<section id="footer">
 			<ul class="icons">
