new title and text

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>MANDEN VOL</h1>
-					<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/title.png" alt="" /></a>
-					<p>gemaakt door Hedwig</p>
+					<!-- <h1>MANDEN VOL</h1> -->
+					<div class="image full"><img src="images/title.png" alt="manden vol" /></div>
+					<p>gemaakt door <a href="#about" class="style2 scrolly scrolly-centered">Hedwig</a></p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Vertel meer</a>
@@ -42,7 +42,7 @@
 					<h2>Manden vol liefs</h2>
 				</header>
 				<p>
-					Fraaie ruiten manden, gevuld met duurzame producten. <br />
+					Degelijke rieten manden, gevuld met duurzame producten. <br />
 					Manden vol kraamcadeaus, <br />
 					manden vol lekkers, <br />
 					manden vol babyshowercadeaus of <br />
@@ -58,10 +58,10 @@
 				<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Lorem ipsum<br />
-						dolor sit amet</h2>
+						<h2>Duurzaam<br />
+						en antropsofisch</h2>
 					</header>
-					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
+					<p>Al mijn cadeaumanden zitten vol met kwalitatief goede producten, veelal van biologische, duurzame en antroposofische oorsprong.</p>
 				</div>
 			</article>
 		
@@ -70,38 +70,37 @@
 				<a href="http://ineedchemicalx.deviantart.com/art/Kingdom-of-the-Wind-348268044" class="image full"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Mollis posuere<br />
-						lectus lacus</h2>
+						<h2>Elke mand uniek</h2>
 					</header>
-					<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+					<p>Elke mand wordt samengesteld met aandacht en liefde. Vertel iets over de persoon of gelegenheid en ik stel een unieke mand samen.</p>
 				</div>
 			</article>
 		
 		<!-- Portfolio -->
 			<article class="container box style2">
 				<header>
-					<h2>Magnis parturient</h2>
-					<p>Justo phasellus et aenean dignissim<br />
-					placerat cubilia purus lectus.</p>
+					<h2>Een voorproefje</h2>
+					<p>Elke mand is uniek maar overeenkomstig mijn eigen stijl.<br />
+					Een kleine impressie. Klik op een afbeelding voor een grotere weergave.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row flush">
-						<div class="3u"><a href="images/fulls/01.jpg" class="image full"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u"><a href="images/fulls/02.jpg" class="image full"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u"><a href="images/fulls/03.jpg" class="image full"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-						<div class="3u"><a href="images/fulls/04.jpg" class="image full"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+						<div class="3u"><a href="images/fulls/01.jpg" class="image full"><img src="images/thumbs/01.jpg" alt="" title="Grote kraammand" /></a></div>
+						<div class="3u"><a href="images/fulls/02.jpg" class="image full"><img src="images/thumbs/02.jpg" alt="" title="Kleine kraammand" /></a></div>
+						<div class="3u"><a href="images/fulls/03.jpg" class="image full"><img src="images/thumbs/03.jpg" alt="" title="Leuke kinderliedjes" /></a></div>
+						<div class="3u"><a href="images/fulls/04.jpg" class="image full"><img src="images/thumbs/04.jpg" alt="" title="Lief doosje" /></a></div>
 					</div>
 					<div class="row flush">
-						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-						<div class="3u"><a href="images/fulls/06.jpg" class="image full"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-						<div class="3u"><a href="images/fulls/07.jpg" class="image full"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
+						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Schaapje van hout" /></a></div>
+						<div class="3u"><a href="images/fulls/06.jpg" class="image full"><img src="images/thumbs/06.jpg" alt="" title="Ingepakte mand" /></a></div>
+						<div class="3u"><a href="images/fulls/07.jpg" class="image full"><img src="images/thumbs/07.jpg" alt="" title="Mooie kaarten" /></a></div>
+						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="Kraammand" /></a></div>
 					</div>
 				</div>
 			</article>
 		
 		<!-- Contact -->
-			<article class="container box style3">
+			<!-- <article class="container box style3">
 				<header>
 					<h2>Nisl sed ultricies</h2>
 					<p>Diam dignissim lectus eu ornare volutpat orci.</p>
@@ -124,11 +123,21 @@
 						</div>
 					</div>
 				</form>
-			</article>
+			</article> -->
 		
+			<article id="about" class="container box style3">
+				<header>
+					<h2>Mijn naam is Hedwig</h2>
+					<p>Ik ben professioneel moeder en maak manden vol liefs als mijn twee kinderen <nobr>in bed liggen</nobr>.</p>
+					<p>Wil je ook een grote of kleine mand vol leuks? <br />
+						Stuur een e-mail naar <span class="mail">hedwig [apestaartje] mandenvol [punt] nl</span> en ik antwoord zeker weten.</p>
+				</header>
+
+			</article>
+
 		<!-- Generic -->
 		
-			<article class="container box style3">
+		<!-- 	<article class="container box style3">
 				<header>
 					<h2>Generic Box</h2>
 					<p>Just a generic box. Nothing to see here.</p>
@@ -280,19 +289,19 @@
 						</div>
 					</form>
 				</section>
-			</article>
+			</article> -->
 		
 		
 		<section id="footer">
 			<ul class="icons">
-				<li><a href="#" class="fa fa-twitter solo"><span>Twitter</span></a></li>
-				<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>
-				<li><a href="#" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
+				<li><a href="https://twitter.com/HedwigBrunemann" class="fa fa-twitter solo"><span>Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/HedwigBrunemann" class="fa fa-facebook solo"><span>Facebook</span></a></li>
+				<li><a href="http://www.pinterest.com/hbrunemann/" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Hedwig.</li>
-					<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
+					<li>&copy; Hedwig</li>
+					<li>Design dankzij <a href="http://html5up.net/">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</section>
