--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 		  ga('send', 'pageview');
 
 		</script>		
+
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-scrolldepth/0.4/jquery.scrolldepth.min.js"></script>
+		<script>
+			$(function() {
+			  $.scrollDepth();
+			});
+		</script>		
 	</head>
 	<body>
 
