--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Manden VOL... liefs... lekkers... leuks... moois...</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="keywords" content="kraammanden,manden,kraampakket,kadomanden,cadeaumanden,duurzaam,antroposofie,tweedehands,recycling,handgemaakt,creatief,origineel,biologisch,ecologisch" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
