--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 					<h2>Manden vol liefs</h2>
 				</header>
 				<p>
-					Degelijke rieten manden, gevuld met duurzame producten. <br />
+					Mooie rieten manden, gevuld met duurzame producten. <br />
 					Manden vol kraamcadeaus, <br />
 					manden vol lekkers, <br />
-					manden vol babyshowercadeaus of <br />
-					manden vol speelgoed.
+					manden vol babyshowercadeaus of bijvoorbeeld<br />
+					manden vol verjaardagscadeaus.
 				</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Dat wil ik zien</a>
@@ -76,8 +76,8 @@
 				<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Duurzaam<br />
-						en antropsofisch</h2>
+						<h2>Duurzaam en<br />
+						antropsofisch</h2>
 					</header>
 					<p>Al mijn cadeaumanden zitten vol met kwalitatief goede producten, veelal van biologische, duurzame en antroposofische oorsprong.</p>
 				</div>
@@ -146,9 +146,9 @@
 			<article id="about" class="container box style3">
 				<header>
 					<h2>Mijn naam is Hedwig</h2>
-					<p>Ik ben professioneel moeder en maak manden vol liefs als mijn twee kinderen <nobr>in bed liggen</nobr>.</p>
+					<p>Ik ben moeder van twee kleine kinderen en maak graag manden vol liefs als ze <nobr>in bed liggen!</nobr>.</p>
 					<p>Wil je ook een grote of kleine mand vol leuks? <br />
-						Stuur een e-mail naar <span class="mail">hedwig [apestaartje] mandenvol [punt] nl</span> en ik antwoord zeker weten.</p>
+						Stuur een e-mail naar <span class="mail">hedwig [apestaartje] mandenvol [punt] nl</span> en ik antwoord zo snel mogelijk.</p>
 				</header>
 
 			</article>
@@ -312,8 +312,8 @@
 		
 		<section id="footer">
 			<ul class="icons">
-				<li><a href="https://twitter.com/HedwigBrunemann" class="fa fa-twitter solo"><span>Twitter</span></a></li>
-				<li><a href="https://www.facebook.com/HedwigBrunemann" class="fa fa-facebook solo"><span>Facebook</span></a></li>
+				
+				<li><a href="https://www.facebook.com/mandenvol" class="fa fa-facebook solo"><span>Facebook</span></a></li>
 				<li><a href="http://www.pinterest.com/hbrunemann/" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
 			</ul>
 			<div class="copyright">
