--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 					<h2>Manden vol liefs</h2>
 				</header>
 				<p>
-					Mooie rieten manden, gevuld met duurzame producten. <br />
-					Manden vol kraamcadeaus, <br />
+					Mooie rieten manden, gevuld met duurzame producten.<br />
+					Manden vol liefs, <br />
 					manden vol lekkers, <br />
-					manden vol babyshowercadeaus of bijvoorbeeld<br />
-					manden vol verjaardagscadeaus.
+					manden vol leuks.<br />
+					Kraammanden, verjaardagsmanden, huwelijksmanden.
 				</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Dat wil ik zien</a>
@@ -146,7 +146,7 @@
 			<article id="about" class="container box style3">
 				<header>
 					<h2>Mijn naam is Hedwig</h2>
-					<p>Ik ben moeder van twee kleine kinderen en maak graag manden vol liefs als ze <nobr>in bed liggen!</nobr>.</p>
+					<p>Ik ben moeder van twee kleine kinderen en maak graag manden vol liefs als ze <nobr>in bed liggen!</nobr></p>
 					<p>Wil je ook een grote of kleine mand vol leuks? <br />
 						Stuur een e-mail naar <span class="mail">hedwig [apestaartje] mandenvol [punt] nl</span> en ik antwoord zo snel mogelijk.</p>
 				</header>
