--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 				<div class="inner gallery">
 					<div class="row flush">
 						<div class="3u"><a href="images/fulls/01.jpg" class="image full"><img src="images/thumbs/01.jpg" alt="" title="Grote kraammand" /></a></div>
-						<div class="3u"><a href="images/fulls/02.jpg" class="image full"><img src="images/thumbs/02.jpg" alt="" title="Kleine kraammand" /></a></div>
+						<div class="3u">&nbsp;</div>
 						<div class="3u"><a href="images/fulls/03.jpg" class="image full"><img src="images/thumbs/03.jpg" alt="" title="Leuke kinderliedjes" /></a></div>
 						<div class="3u"><a href="images/fulls/04.jpg" class="image full"><img src="images/thumbs/04.jpg" alt="" title="Lief doosje" /></a></div>
 					</div>
 					<div class="row flush">
 						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Schaapje van hout" /></a></div>
 						<div class="3u"><a href="images/fulls/06.jpg" class="image full"><img src="images/thumbs/06.jpg" alt="" title="Ingepakte mand" /></a></div>
-						<div class="3u"><a href="images/fulls/07.jpg" class="image full"><img src="images/thumbs/07.jpg" alt="" title="Mooie kaarten" /></a></div>
+						<div class="3u">&nbsp;</div>
 						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="Kraammand" /></a></div>
 					</div>
 				</div>
@@ -146,7 +146,7 @@
 			<article id="about" class="container box style3">
 				<header>
 					<h2>Mijn naam is Hedwig</h2>
-					<p>Ik ben moeder van twee kleine kinderen en maak graag manden vol liefs als ze <nobr>in bed liggen!</nobr></p>
+					<p>Ik ben moeder van twee kleine kinderen en maak graag manden vol liefs.</p>
 					<p>Wil je ook een grote of kleine mand vol leuks? <br />
 						Stuur een e-mail naar <span class="mail">hedwig [apestaartje] mandenvol [punt] nl</span> en ik antwoord zo snel mogelijk.</p>
 				</header>
